[gd_scene load_steps=3 format=2]

[ext_resource path="res://weapons/butter/Butter.png" type="Texture" id=1]
[ext_resource path="res://weapons/butter/Butter.gd" type="Script" id=2]

[node name="Rifle" type="Sprite"]
modulate = Color( 1, 0.960784, 0, 1 )
position = Vector2( 24.7355, -4.30183 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
